--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Python3.8\\python.exe"
+    "python.pythonPath": "C:\\Users\\Amitra Bhunia\\Anaconda3\\python.exe"
 }
